Fix RS-144598 - Add application instances counter - Add check for application instances count before update

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -854,6 +854,7 @@ CatalogPanel.SchemaName=Schema Name
 CatalogPanel.catalogName=Catalog Name:
 CheckForUpdateNotifier.Version=version
 CheckForUpdateNotifier.checkingUpdatesMessage=Checking for updated version
+CheckForUpdateNotifier.CloseAllInstances=Close others RedExpert instances firstly
 CheckForUpdateNotifier.checkingUpdatesTitle=Check for update
 CheckForUpdateNotifier.console-ApplicationNeedsUpdate=The application needs to be updated
 CheckForUpdateNotifier.console-CannotCheckForUpdates=Cannot check for updates
@@ -869,7 +870,7 @@ CheckForUpdateNotifier.noInternetMessage=There is no internet connection. Please
 CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
 CheckForUpdateNotifier.restart.message.title=Update downloaded
-CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application?\nClose all copies of this application before restarting.
+CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application?
 CheckForUpdateNotifier.title=RedExpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
