--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -854,6 +854,7 @@ CatalogPanel.SchemaName=Имя схемы
 CatalogPanel.catalogName=Имя каталога
 CheckForUpdateNotifier.Version=версия
 CheckForUpdateNotifier.checkingUpdatesMessage=Проверка обновленной версии
+CheckForUpdateNotifier.CloseAllInstances=Сначала закройте все другие экземпляры этого приложения
 CheckForUpdateNotifier.checkingUpdatesTitle=Проверка обновлений
 CheckForUpdateNotifier.console-ApplicationNeedsUpdate=Приложение необходимо обновить
 CheckForUpdateNotifier.console-CannotCheckForUpdates=Не удается проверить наличие обновлений
@@ -869,7 +870,7 @@ CheckForUpdateNotifier.noInternetMessage=Отсутствует подключе
 CheckForUpdateNotifier.noUpdateMessage=Обновление недоступно. \nДанная версия Red Expert актуальна. \nПериодически проверяйте обновления, чтобы убедиться, что у вас установлена последняя версия.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Получение примечаний к выпуску новой версии
 CheckForUpdateNotifier.restart.message.title=Обновление загружено
-CheckForUpdateNotifier.restart.message=Обновление загружено. Перезапустить приложение?\nПеред перезагрузкой закройте все копии этого приложения.
+CheckForUpdateNotifier.restart.message=Обновление загружено. Перезапустить приложение?
 CheckForUpdateNotifier.title=Обновление Ред Эксперта
 CheckForUpdateNotifier.updateAvailable=Доступно обновление
 ClearRecentFilesCommand.message=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
