improve AuditAnalise 1. add colored highlighting of time/read/fetch/write cells 2. descending order - default 3. add plan

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -616,7 +616,9 @@ AddToUserDefinedKeywordsCommand.log.addKeyword1=Keyword [
 AddToUserDefinedKeywordsCommand.log.addKeyword2=\ ] added to user defined keyword list.
 AddToUserDefinedKeywordsCommand.log.errorAddKeyword=Keyword already exists as a part of the defined keyword list.
 AnalisePanel.HideEvents=Hide events
-AnalisePanel.ShowEvents=Show events
+AnalisePanel.ShowEvents=Filter events
+AnalisePanel.HidePlan=Hide plan
+AnalisePanel.ShowPlan=Show plan
 AnalisePanel.AvailableEvents=Available events
 AnalisePanel.SelectedEvents=Selected events
 AnalisePanel.Period=Period:
