Add localization (RS-96698)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -59,6 +59,8 @@ common.input-parameters=Input parameters
 common.key=Key
 common.locale=en
 common.lost-connection=Lost connection to the server
+common.message=Message
+common.warning=Warning
 common.message-enter-password=Your user name and password are not defined.\nPlease enter your user name and password.
 common.message.apply-changes=Do you wish to apply your changes?
 common.metadata=Meta Data
@@ -967,6 +969,7 @@ ConnectionPanel.Authentication=Authentication:
 ConnectionPanel.Basic=Basic
 ConnectionPanel.BasicAu=Basic
 ConnectionPanel.CharacterSet=Character Set:
+ConnectionPanel.NoCharacterSet=NONE
 ConnectionPanel.ChooseFile=Choose file
 ConnectionPanel.ConnectionParameters.tool-tip=Specify connection parameters or JDBC string
 ConnectionPanel.ConnectionParameters=Connection parameters:
@@ -1933,6 +1936,11 @@ SearchFilesDialog.message.EnterSearchText=You must enter search text
 SearchFilesDialog.message.NotSelectedPath=You must select a search path
 SearchFilesDialog.message.ThePathNotExist=The path or file entered does not exist
 SearchFilesDialog.message.searchSubdirsCheck=Search Subdirectories
+ScratchPadPanel.title=Scratch Pad
+ScratchPadPanel.paste=Paste to Query Editor
+ScratchPadPanel.new=New Scratch Pad
+ScratchPadPanel.clear=Clear
+ScratchPadPanel.JobName=Red Expert - scratch pad
 ShowPasswordDialog.Password=Password
 ShowPasswordDialog.Copy=Copy to Clipboard
 ShowPasswordDialog.CopyToolTip=Copies the selected query to the system clipboard
