add plan count to AuditAnalise

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -627,6 +627,7 @@ AnalisePanel.ShowPlan=Show plan
 AnalisePanel.AvailableEvents=Available events
 AnalisePanel.SelectedEvents=Selected events
 AnalisePanel.Period=Period:
+AnalisePanel.Plan=Plan (If there is more than one plan, the font will be red)
 AnaliseRecompileDialog.generateScript=generated script for {0}
 ApplicationLauncher.console-JavaVersion=Java version
 ApplicationLauncher.console-OSVersion=Operating System
