--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -627,6 +627,7 @@ AnalisePanel.ShowPlan=Показать план
 AnalisePanel.AvailableEvents=Доступные события
 AnalisePanel.SelectedEvents=Выбранные события
 AnalisePanel.Period=Период:
+AnalisePanel.Plan=План (Если планов несколько, шрифт будет красным)
 AnaliseRecompileDialog.generateScript=сгенерирован скрипт для {0}
 ApplicationLauncher.console-JavaVersion=Версия Java
 ApplicationLauncher.console-OSVersion=Операционная система
