add extra params to audit analise

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -628,6 +628,17 @@ AnalisePanel.AvailableEvents=Available events
 AnalisePanel.SelectedEvents=Selected events
 AnalisePanel.Period=Period:
 AnalisePanel.Plan=Plan (If there is more than one plan, the font will be red)
+AnalisePanel.showMoreParams=Show more parameters
+AnalisePanel.extraParams=Extra parameters
+AnalisePanel.roundValues=Round values
+AnalisePanel.filterToolTip=Treat queries as identical if they have the same first N characters
+AnalisePanel.filterText=Compare queries of N symbols
+AnaliseRow.TIME=Execution time of a query or event
+AnaliseRow.READ=Number of pages read from disk
+AnaliseRow.WRITE=Number of pages written to disk
+AnaliseRow.FETCH=Number of pages read from page cache
+AnaliseRow.RSORT=Amount of RAM used for sorting
+AnaliseRow.DSORT=Size of temporary files used in the query 
 AnaliseRecompileDialog.generateScript=generated script for {0}
 ApplicationLauncher.console-JavaVersion=Java version
 ApplicationLauncher.console-OSVersion=Operating System
