--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -628,6 +628,17 @@ AnalisePanel.AvailableEvents=Доступные события
 AnalisePanel.SelectedEvents=Выбранные события
 AnalisePanel.Period=Период:
 AnalisePanel.Plan=План (Если планов несколько, шрифт будет красным)
+AnalisePanel.showMoreParams=Показать дополнительные параметры
+AnalisePanel.extraParams=Дополнительные параметры
+AnalisePanel.roundValues=Округлить значения
+AnalisePanel.filterToolTip=Считать запросы одинаковыми если у них совпадают первые N символов
+AnalisePanel.filterText=Сравнивать по N  
+AnaliseRow.TIME=Время выполнения запроса или события
+AnaliseRow.READ=Количество страниц, считанных с диска
+AnaliseRow.WRITE=Количество страниц, записанных на диск
+AnaliseRow.FETCH=Количество страниц, считанных из страничного кэша
+AnaliseRow.RSORT=Объем ОЗУ использованной для сортировки
+AnaliseRow.DSORT=Размер временных файлов, использованных в запросе
 AnaliseRecompileDialog.generateScript=сгенерирован скрипт для {0}
 ApplicationLauncher.console-JavaVersion=Версия Java
 ApplicationLauncher.console-OSVersion=Операционная система
