Add extended view mode with PSQL statistics for profiler

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -95,6 +95,7 @@ common.triggers=Triggers
 common.value=Value
 common.yes.button=Yes
 common.show=Show
+common.info=Information
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
@@ -1762,7 +1763,9 @@ ProfilerPanel.Stop=Stop
 ProfilerPanel.Cancel=Cancel
 ProfilerPanel.Discard=Discard
 ProfilerPanel.Connection=Connection:
-ProfilerPanel.compactViewCheckBox=Compact view
+ProfilerPanel.defaultTreeView=Default view
+ProfilerPanel.compactTreeView=Compact view
+ProfilerPanel.extendedTreeView=Extended view
 ProfilerPanel.NoData=The profiler did not collect any data\nPlease check the selected connection
 ProfilerPanel.NoNewData=The profiler did not collect more data than it had
 ProfilerPanel.VersionNotSupported=Unable to start profiler session\nDB version below 5.0
@@ -1779,6 +1782,8 @@ ProfilerPanel.PROCESS-NAME=PROCESS NAME
 ProfilerPanel.TOTAL-TIME=TOTAL TIME (ns)
 ProfilerPanel.AVERAGE-TIME=AVERAGE TIME (ns)
 ProfilerPanel.CALLS-COUNT=CALLS COUNT
+ProfilerTabPopupMenu.RecordDataItemViewer=Data Item Viewer
+ProfilerTabPopupMenu.NoInformationForSelectedNode=There are no information for selected node
 PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
 PropertiesLookPlugins.Find=Find
 PropertiesLookPlugins.Browse=Browse
