--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -95,6 +95,7 @@ common.triggers=Триггеры
 common.value=Значение
 common.yes.button=Да
 common.show=Просмотреть
+common.info=Информация
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
@@ -1762,7 +1763,9 @@ ProfilerPanel.Stop=Стоп
 ProfilerPanel.Cancel=Отменить
 ProfilerPanel.Discard=Очистить
 ProfilerPanel.Connection=Соединение:
-ProfilerPanel.compactViewCheckBox=Компактное отображение
+ProfilerPanel.defaultTreeView=Стандартное отображение
+ProfilerPanel.compactTreeView=Компактное отображение
+ProfilerPanel.extendedTreeView=Расширенное отображение
 ProfilerPanel.NoData=Профайлер не собрал никаких данных\nПожалуйста, проверьте выбранное соединение
 ProfilerPanel.NoNewData=Профайлер не собрал больше данных, чем было
 ProfilerPanel.VersionNotSupported=Невозможно запустить сессию профайлера\nВерсия БД ниже 5.0
@@ -1779,6 +1782,8 @@ ProfilerPanel.PROCESS-NAME=ИМЯ ПРОЦЕССА
 ProfilerPanel.TOTAL-TIME=ОБЩЕЕ ВРЕМЯ (нс)
 ProfilerPanel.AVERAGE-TIME=СРЕДНЕЕ ВРЕМЯ (нс)
 ProfilerPanel.CALLS-COUNT=КОЛ-ВО ВЫЗОВОВ
+ProfilerTabPopupMenu.RecordDataItemViewer=Средство просмотра данных
+ProfilerTabPopupMenu.NoInformationForSelectedNode=Для выбранного узла недоступен просмотр информации
 PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
 PropertiesLookPlugins.Find=Найти
 PropertiesLookPlugins.Browse=Выбор
