Add ability to profile remote attachments of the DB connection

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1763,6 +1763,7 @@ ProfilerPanel.Stop=Stop
 ProfilerPanel.Cancel=Cancel
 ProfilerPanel.Discard=Discard
 ProfilerPanel.Connection=Connection:
+ProfilerPanel.Attachment=Attachment:
 ProfilerPanel.defaultTreeView=Default view
 ProfilerPanel.compactTreeView=Compact view
 ProfilerPanel.extendedTreeView=Extended view
