--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1762,7 +1762,8 @@ ProfilerPanel.Resume=Возобновить
 ProfilerPanel.Stop=Стоп
 ProfilerPanel.Cancel=Отменить
 ProfilerPanel.Discard=Очистить
-ProfilerPanel.Connection=Соединение:
+ProfilerPanel.Connection=База Данных:
+ProfilerPanel.Attachment=Соединение:
 ProfilerPanel.defaultTreeView=Стандартное отображение
 ProfilerPanel.compactTreeView=Компактное отображение
 ProfilerPanel.extendedTreeView=Расширенное отображение
