add MARK to Audit Analise

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -637,6 +637,7 @@ AnalisePanel.filterText=Compare queries of N symbols
 AnaliseRow.TIME=Execution time of a query or event
 AnaliseRow.READ=Number of pages read from disk
 AnaliseRow.WRITE=Number of pages written to disk
+AnaliseRow.MARK=Number of pages modified in the page cache
 AnaliseRow.FETCH=Number of pages read from page cache
 AnaliseRow.RSORT=Amount of RAM used for sorting
 AnaliseRow.DSORT=Size of temporary files used in the query 
