--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -637,6 +637,7 @@ AnalisePanel.filterText=Сравнивать по N
 AnaliseRow.TIME=Время выполнения запроса или события
 AnaliseRow.READ=Количество страниц, считанных с диска
 AnaliseRow.WRITE=Количество страниц, записанных на диск
+AnaliseRow.MARK=Количество страниц, изменённых в страничном кэше
 AnaliseRow.FETCH=Количество страниц, считанных из страничного кэша
 AnaliseRow.RSORT=Объем ОЗУ использованной для сортировки
 AnaliseRow.DSORT=Размер временных файлов, использованных в запросе
