Translated settings -> hotkeys -> 'Execute Script In Profiler' label

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -209,6 +209,7 @@ action.log-in-account-command=Log in reddatabase.ru
 action.manage-bookmarks-command=Manage Query Bookmarks
 action.manage-shortcuts-command=Manage Query Shortcuts
 action.map-erd-command=Map Existing Database
+action.execute-in-profiler-command=Execute Script In Profiler
 action.move-row-down-command=Move text down
 action.move-row-up-command=Move text up
 action.new-command.description=Open a New Editor
