--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -209,6 +209,7 @@ action.log-in-account-command=Войти на reddatabase.ru
 action.manage-bookmarks-command=Управление закладками запросов
 action.manage-shortcuts-command=Шаблоны SQL
 action.map-erd-command=ER-диаграмма базы данных
+action.execute-in-profiler-command=Выполнить в профайлере
 action.move-row-down-command=Сдвинуть текст вниз
 action.move-row-up-command=Сдвинуть текст вверх
 action.new-command.description=Открыть новый редактор
