Add localization for ManageShortcutsPanel title and tooltips

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1684,6 +1684,9 @@ ManageBookmarksPanel.newBookmarkName=New Bookmark
 ManageBookmarksPanel.okButton=Save
 ManageBookmarksPanel.saveError=Error storing bookmarks
 ManageBookmarksPanel.validation.uniqueName=The name for this bookmark already exists.\nBookmark names must be unique.
+ManageShortcutsPanel.title=Manage Editor SQL Shortcuts
+ManageShortcutsPanel.addShortcut=Add shortcut
+ManageShortcutsPanel.deleteShortcut=Delete shortcut
 ManageShortcutsPanel.cancelButton=Cancel
 ManageShortcutsPanel.invalidShortcuts=Please ensure all shortcuts contain query text and shortcuts are unique and contain no whitespace.
 ManageShortcutsPanel.newShortcutName=shortcut-text
