--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1684,6 +1684,9 @@ ManageBookmarksPanel.newBookmarkName=Новая закладка
 ManageBookmarksPanel.okButton=Сохранить
 ManageBookmarksPanel.saveError=Ошибка сохранения закладки
 ManageBookmarksPanel.validation.uniqueName=Такое имя закладки уже существует. \n Закладка должна быть уникальной
+ManageShortcutsPanel.title=Управление шаблонами редактора SQL
+ManageShortcutsPanel.addShortcut=Добавить горячую клавишу
+ManageShortcutsPanel.deleteShortcut=Удалить горячую клавишу
 ManageShortcutsPanel.cancelButton=Отмена
 ManageShortcutsPanel.invalidShortcuts=Пожалуйста убедитесь, что все горячие клавиши содержат текст запроса, а имена горячих клавиш уникальны и не содержат пробелов.
 ManageShortcutsPanel.newShortcutName=имя-горячих-клавиш
