Add localization for ReadOnlyTextPanePopUpMenu

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1916,6 +1916,16 @@ QueryTextPopupToolbar.PreviousExecutedResultSet=Previous executed result set
 QueryTextPopupToolbar.NextExecutedResultSet=Next executed result set
 QueryTextPopupToolbar.Copy=Copy this query to the system clipboard
 QueryTextPopupToolbar.GoTo=Go to this query in the editor
+ReadOnlyTextPanePopUpMenu.copy=Copy
+ReadOnlyTextPanePopUpMenu.selectAll=Select All
+ReadOnlyTextPanePopUpMenu.saveToFile=Save to File
+ReadOnlyTextPanePopUpMenu.clear=Clear
+ReadOnlyTextPanePopUpMenu.saveToFile.tooltip=Save the contents to file
+ReadOnlyTextPanePopUpMenu.clear.tooltip=Clear the output pane
+ReadOnlyTextPanePopUpMenu.saveFileDialogTitle=Select Output File Path
+ReadOnlyTextPanePopUpMenu.overwriteFile=The selected file exists.\nOverwrite existing file?
+ReadOnlyTextPanePopUpMenu.writingError=Error writing output pane contents to file.\n
+ReadOnlyTextPanePopUpMenu.resetConfirm=Are you sure you want to reset the system activity log?
 ReddatabaseAPI.Authorization=Authorization
 ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
 ReddatabaseAPI.unknown-password=Unknown Login or Password. Try again?
