remove parsing of variables in procedures and functions by default, because in this block during parsing there is often a misrecognition and also the possibility of "DECLARE PROCEDURE" and "DECLARE FUNCTION" is not taken into account here.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1117,6 +1117,7 @@ CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
+CreateProcedureFunctionPanel.parseVariables=parse variables
 CreateTableFunctionPanel.BrowseButtonText=Browse
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
