--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1117,6 +1117,7 @@ CreateProcedureFunctionPanel.InputParameters=Входные параметры
 CreateProcedureFunctionPanel.OutputParameters=Выходные параметры
 CreateProcedureFunctionPanel.PROCEDURE=процедуры
 CreateProcedureFunctionPanel.Variables=Переменные
+CreateProcedureFunctionPanel.parseVariables=Парсить переменные
 CreateTableFunctionPanel.BrowseButtonText=Открыть Файл
 CreateTableFunctionPanel.Columns=Столбцы
 CreateTableFunctionPanel.Connection=Подключение:
