Add description for audit analise (RS-140535)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -2674,7 +2674,7 @@ ER-диаграмма визуализирует табличные связи, 
 	\centering
 	\includegraphics[width = 0.95\linewidth]{img/trace_mag2.png}
 \end{figure}
-\noindent либо таблица полностью урезается и остаются только искомые строки.
+\noindent Либо таблица полностью урезается и остаются только искомые строки.
 
 \anonsubsubsection{Просмотр содержимого}
 
@@ -2689,7 +2689,92 @@ ER-диаграмма визуализирует табличные связи, 
 	\item SQL скрипт заполнения таблицы базы данных
 \end{enumerate}
 	
+\anonsubsection{Анализ трейса}	
 
+Анализ трейса отображает информацию о событиях произошедших в указанный период времени. События добавляются либо при включении трассировки, либо при открытии лог-файла.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/trace_analysis.png}
+\end{figure}
+
+Параметры анализа трейса:
+\begin{itemize}
+	\item \ttt{TIME} - Если включен, то в результирующую таблицу будет добавлена информация о времени выполнения запроса;
+	\item \ttt{READ} - Если включен, то в результирующую таблицу будет добавлена информация о количестве страниц, считанных с диска;
+	\item \ttt{FETCH} -  Если включен, то в результирующую таблицу будет добавлена информация о количестве страниц, считанных из страничного кэша;
+	\item \ttt{WRITE} - Если включен, то в результирующую таблицу будет добавлена информация о количестве страниц, записанных на диск;
+	\item \ttt{MARK} - Если включен, то в результирующую таблицу будет добавлена информация о количестве страниц, изменённых в страничном кэше;
+	\item \ttt{RSORT} - Если включен, то в результирующую таблицу будет добавлена информация об объёме ОЗУ, использованном для сортировки;
+	\item \ttt{DSORT} - Если включен, то в результирующую таблицу будет добавлена информация о размере временных файлов, использованных в запросе;
+	\item \ttt{Округлить значения} - Если значение больше 10000, то оно будет переводиться в большую единицу измерения, пока не станет меньше 10000;
+	\item \ttt{Показать план} - Если включен, то будет показан план выполнения выбранного запроса;
+	\item \ttt{Показать дополнительные параметры} - Если включен, то будут показаны дополнительные параметры анализа.
+\end{itemize}
+
+Дополнительные параметры:
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/trace_analysis_additional_parameters.png}
+\end{figure}
+\begin{itemize}
+	\item \ttt{Период} - Период времени, который нужно проанализировать; после изменения периода нужно нажать кнопку \ttt{Обновить};
+	\item \ttt{Сравнить по N} - Считать запросы одинаковыми, если у них совпадают первые N символов;
+	\item \ttt{Фильтр событий} - Позволяет выбрать типы событий, которые нужно анализировать.
+\end{itemize}
+
+Результирующая таблица:
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/trace_analysis_result.png}
+\end{figure}
+
+При наведении на ячейку в всплывающей подсказке будет показана сумма значений столбца и среднее значение. Для просмотра полного текста запроса и его плана нужно кликнуть на ячейку правой кнопкой мыши. При двойном клике откроется окно с записью события в текстовом формате.
+
+Описание значений столбцов таблицы:
+
+\begin{longtable}[r]{|>{\ttfamily}m{4.6cm}|m{10.9cm}|}
+	\hline
+	\centering\normalfont\bfseries Столбец &
+	\centering\arraybslash\bfseries Описание\\\hline
+	\endfirsthead
+	\centering\normalfont\bfseries Столбец &
+	\centering\arraybslash\bfseries Описание\\\hline
+	\endhead
+	\hline
+	QUERY & Текст запроса\\\hline
+	COUNT & Количество выполнений запроса\\\hline
+	PLAN\_COUNT & Количество планов запроса\\\hline
+	TOTAL\_TIME & Общее время выполнения в миллисекундах\\\hline
+	AVG\_TIME & Среднее время выполнения в миллисекундах\\\hline
+	MAX\_TIME & Максимальное время выполнения в миллисекундах\\\hline
+	STD\_DEV\_TIME & Среднеквадратическое отклонение времени выполнения\\\hline
+	TOTAL\_READ & Общее количество страниц, считанных с диска\\\hline
+	AVG\_READ & Среднее количество страниц, считанных с диска\\\hline
+	MAX\_READ & Максимальное количество страниц, считанных с диска\\\hline
+	STD\_DEV\_READ & Среднеквадратическое отклонение количества страниц, считанных с диска\\\hline
+	TOTAL\_FETCH & Общее количество страниц, считанных из страничного кэша\\\hline
+	AVG\_FETCH & Среднее количество страниц, считанных из страничного кэша\\\hline
+	MAX\_FETCH & Максимальное количество страниц, считанных из страничного кэша\\\hline
+	STD\_DEV\_FETCH & Среднеквадратическое отклонение количества страниц, считанных из страничного кэша\\\hline
+	TOTAL\_WRITE & Общее количество страниц, записанных на диск\\\hline
+	AVG\_WRITE & Среднее количество страниц, записанных на диск\\\hline
+	MAX\_WRITE & Максимальное количество страниц, записанных на диск\\\hline
+	STD\_DEV\_WRITE & Среднеквадратическое отклонение количества страниц, записанных на диск\\\hline
+	TOTAL\_MARK & Общее количество страниц, изменённых в страничном кэше\\\hline
+	AVG\_MARK & Среднее количество страниц, изменённых в страничном кэше\\\hline
+	MAX\_MARK & Максимальное количество страниц, изменённых в страничном кэше\\\hline
+	STD\_DEV\_MARK & Среднеквадратическое отклонение количества страниц, изменённых в страничном кэше\\\hline
+	TOTAL\_RSORT & Общий объём оперативной памяти, использованный для сортировки (в байтах)\\\hline
+	AVG\_RSORT & Средний объём оперативной памяти, использованный для сортировки (в байтах)\\\hline
+	MAX\_RSORT & Максимальный объём оперативной памяти, использованный для сортировки (в байтах)\\\hline
+	STD\_DEV\_RSORT & Среднеквадратическое отклонение объёма оперативной памяти, использованного для сортировки\\\hline
+	TOTAL\_DSORT & Общий размер временных файлов, использованный в запросе (в байтах)\\\hline
+	AVG\_DSORT & Средний размер временных файлов, использованный в запросе (в байтах)\\\hline
+	MAX\_DSORT & Максимальный размер временных файлов, использованный в запросе (в байтах)\\\hline
+	STD\_DEV\_DSORT & Среднеквадратическое отклонение размера временных файлов, использованного в запросе\\\hline
+\end{longtable}
+	
 \anonsubsection{Менеджер сессий}
 Менеджер сессий отображает список всех доступных в настоящее время сеансов трассировки. Вкладка менеджера видна только при запущенной текущей сессии аудита. 
 
