Add roundValues checkBox for execution time in the profiler tree

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1768,6 +1768,7 @@ ProfilerPanel.Resume=Resume
 ProfilerPanel.Stop=Stop
 ProfilerPanel.Cancel=Cancel
 ProfilerPanel.Discard=Discard
+ProfilerPanel.roundValuesCheckBox=Round Values
 ProfilerPanel.Connection=Connection:
 ProfilerPanel.Attachment=Attachment:
 ProfilerPanel.defaultTreeView=Default view
@@ -1786,8 +1787,8 @@ ProfilerPanel.NotConnected=Selected connection is unavailable.
 ProfilerPanel.NotConnectedCancel=Selected connection is unavailable.\nProfiler session discarded.
 ProfilerPanel.SelfTime=Self Time
 ProfilerPanel.PROCESS-NAME=PROCESS NAME
-ProfilerPanel.TOTAL-TIME=TOTAL TIME (ns)
-ProfilerPanel.AVERAGE-TIME=AVERAGE TIME (ns)
+ProfilerPanel.TOTAL-TIME=TOTAL TIME
+ProfilerPanel.AVERAGE-TIME=AVERAGE TIME
 ProfilerPanel.CALLS-COUNT=CALLS COUNT
 ProfilerTabPopupMenu.RecordDataItemViewer=Data Item Viewer
 ProfilerTabPopupMenu.NoInformationForSelectedNode=There are no information for selected node
