Add localization for SystemOutputPanelPopUpMenu and FindAction panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -87,6 +87,7 @@ common.send.button=Send
 common.size=Size
 common.subtype=Subtype
 common.stop=Stop
+common.search=Search:
 common.select=Select
 common.table=Table
 common.test.button=Test
@@ -1990,6 +1991,9 @@ SimpleTextComponentPopUpMenu.Copy=Copy
 SimpleTextComponentPopUpMenu.Paste=Paste
 SimpleTextComponentPopUpMenu.Cut=Cut
 SystemOutputPanel.title=Output Console
+SystemOutputPanelPopUpMenu.reset=Reset
+SystemOutputPanelPopUpMenu.reset.tooltip=Clear the system output pane and reset the output log file
+SystemOutputPanelPopUpMenu.reset.confirm=Are you sure you want to reset the system activity log?
 SystemResources.findedOldSettings=The settings of the previous version of application were found.\nApply these settings in this version?
 TableColumnIndexTableModel.Expression=Expression
 TableColumnIndexTableModel.IndexName=Index Name
