--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -87,6 +87,7 @@ common.send.button=Отправить
 common.size=Размер
 common.subtype=Подтип
 common.stop=Остановить
+common.search=Поиск:
 common.select=Выбрать
 common.table=Таблица
 common.test.button=Тест
@@ -1990,7 +1991,10 @@ SimpleTextComponentPopUpMenu.Copy=Копировать
 SimpleTextComponentPopUpMenu.Paste=Вставить
 SimpleTextComponentPopUpMenu.Cut=Вырезать
 SystemOutputPanel.title=Вывод консоли
-SystemResources.findedOldSettings=Найдены сохранненные настройки предыдущей версии приложения\nПрименить эти настройки к данной версии?
+SystemOutputPanelPopUpMenu.reset=Сбросить
+SystemOutputPanelPopUpMenu.reset.tooltip=Очистить панель вывода системы и сбросьте файл журнала вывода
+SystemOutputPanelPopUpMenu.reset.confirm=Вы уверены, что хотите сбросить журнал активности системы?
+SystemResources.findedOldSettings=Найдены сохраненные настройки предыдущей версии приложения\nПрименить эти настройки к данной версии?
 TableColumnIndexTableModel.Expression=Выражение
 TableColumnIndexTableModel.IndexName=Название Индекса
 TableColumnIndexTableModel.IndexedColumn=Связанный Столбец
