Actualise profiler description (RS-146590)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1944,11 +1944,11 @@ SELECT * FROM employees WHERE (surname = ?)
 	\caption{Открытие панели профайлера}
 \end{figure}
 
-После этого откроется панель профайлера, состоящая из выпадающего списка для выбора соединения, набора кнопок для управления сессией профайлера, поля "Компактное отображение" и результирующей таблицы.
+После этого откроется панель профайлера, состоящая из выпадающих списков для выбора базы данных и соединения, набора кнопок для управления сессией профайлера, результирующей таблицы и панели для выбора формата отображения дерева вызовов.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width = 1\linewidth]{img/profiler_module.png}
+	\includegraphics[width = 1\linewidth]{img/profiler_expanded_data_display.png}
 	\caption{Панель профайлера}
 \end{figure}
 
@@ -1962,23 +1962,55 @@ SELECT * FROM employees WHERE (surname = ?)
 \item \ttt{Очистить} -- удаляет все сеансы профайлера из памяти, не cбрасывая их данных. Если есть активный сеанс, он завершается. Также очищает дерево вызовов, которое было построено профайлером.
 \end{itemize}
 
-\ttt{Компактное отображение} меняет способ отображения данных. Если включено, то повторяющиеся процессы внутри общего родительского будут объединены в один. По умолчанию включено.
-
+Форматы отображения результата: 
+\begin{itemize}
+\item \ttt{Компактное отображение} -- Повторяющиеся процессы внутри общего родительского будут объединены в один. Является значением по умолчанию.
  \begin{figure}[H]
- 	\centering
- 	\includegraphics[width = 1\linewidth]{img/profiler_compact_data_display.png}
- 	\caption{Компактное отображение данных}
- \end{figure}
+	\centering
+	\includegraphics[width = 0.8\linewidth]{img/profiler_compact_data_display.png}
+	\caption{Компактное отображение данных}
+\end{figure}
+\item \ttt{Стандартное отображение} -- Каждый процесс отображается в отдельном узле. Повторяющиеся процессы не объединяются.
+ \begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.8\linewidth]{img/profiler_standard_data_display.png}
+	\caption{Стандартное отображение данных}
+\end{figure}
+\item \ttt{Расширенное отображение} -- В дополнение к стандартному отображению добавлена PSQL статистика для внутренних объектов процедур и функций.
+ \begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.8\linewidth]{img/profiler_expanded_data_display.png}
+	\caption{Расширенное отображение данных}
+\end{figure}
+\item \ttt{Округлять значения} - Если общее или среднее время больше 1000000ns, то оно будет переводиться в большую единицу измерения, пока значение не станет меньше 1000000. По умолчанию включено.
+\end{itemize}
+В компактном и стандартном отображении для каждого не последнего узла (за исключением \ttt{ROOT NODE} - корневого узла) есть узел \ttt{Собственное время}, показывающий затраченное время без учета дочерних процессов.
 
 В результирующей таблице отображается информация, собранная профайлером, а именно:
 \begin{itemize}
 	\item Имя процесса или \ttt{SQL-код};
-	\item Затраченное на процесс время (с учетом дочерних процессов) и процент времени от родительского процесса;
-	\item Среднее затраченное на процесс время (с учетом дочерних процессов) для повторяющихся процессов, объединенных в один узел; 
+	\item Затраченное на процесс время в наносекундах (с учетом дочерних процессов) и процент времени от родительского процесса;
+	\item Среднее затраченное на процесс время в наносекундах (с учетом дочерних процессов) для повторяющихся процессов, объединенных в один узел; 
 	\item Количество вызовов повторяющихся процессов.
 \end{itemize}
-Для каждого не последнего узла (за исключением \ttt{ROOT NODE} - корневого узла) есть узел \ttt{Собственное время}, показывающий затраченное время без учета дочерних процессов.
-
+При выборе узла будет открыто всплывающее окно.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.4\linewidth]{img/profiler_nodes.png}
+\end{figure}
+\begin{itemize}
+	\item \ttt{Копия} -- Скопировать содержимое выбранного узла в буфер обмена.
+	\item \ttt{Просмотреть} -- Открыть содержимое узла в отдельном окне. Если это процедура или функция, будет отображен ее код.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.5\linewidth]{img/profiler_node_view.png}
+	\end{figure}
+	\item \ttt{Информация} -- Открыть в отдельном окне всю информацию, которую собрал профайлер для выбранного узла.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.6\linewidth]{img/profiler_node_info.png}
+	\end{figure}
+\end{itemize}
 Сессию профайлера можно запустить для одного запроса из \ttt{редактора запросов} кликом по кнопке "Выполнить в профайлере". В этом случае будет выполнено следующее:
 \begin{enumerate}
 	\item Запустится сессия профайлера.
@@ -2729,7 +2761,7 @@ ER-диаграмма визуализирует табличные связи, 
 	\includegraphics[width = 1\linewidth]{img/trace_analysis_result.png}
 \end{figure}
 
-При наведении на ячейку в всплывающей подсказке будет показана сумма значений столбца и среднее значение. Для просмотра полного текста запроса и его плана нужно кликнуть на ячейку правой кнопкой мыши. При двойном клике откроется окно с записью события в текстовом формате.
+При наведении на ячейку в всплывающей подсказке будет показана сумма значений столбца и среднее значение. Для просмотра полного текста запроса и его плана нужно выбрать ячейку. При двойном клике откроется окно с записью события в текстовом формате.
 
 Описание значений столбцов таблицы:
 
