Add localization for SystemLogsViewer

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1990,6 +1990,11 @@ SimpleDataItemViewerPanel.Text=Text
 SimpleTextComponentPopUpMenu.Copy=Copy
 SimpleTextComponentPopUpMenu.Paste=Paste
 SimpleTextComponentPopUpMenu.Cut=Cut
+SystemLogsViewer.title=System Log Viewer
+SystemLogsViewer.reload=Reload this log file
+SystemLogsViewer.reset=Reset this log file
+SystemLogsViewer.outOfMemory=Out of Memory.\nThe file is too large to open for viewing.
+SystemLogsViewer.resetConfirmed=Are you sure you want to reset the selected log file?
 SystemOutputPanel.title=Output Console
 SystemOutputPanelPopUpMenu.reset=Reset
 SystemOutputPanelPopUpMenu.reset.tooltip=Clear the system output pane and reset the output log file
