--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1990,6 +1990,11 @@ SimpleDataItemViewerPanel.Text=Текст
 SimpleTextComponentPopUpMenu.Copy=Копировать
 SimpleTextComponentPopUpMenu.Paste=Вставить
 SimpleTextComponentPopUpMenu.Cut=Вырезать
+SystemLogsViewer.title=Просмотр системного журнала
+SystemLogsViewer.reload=Перезагрузить этот файл журнала
+SystemLogsViewer.reset=Сбросить этот файл журнала
+SystemLogsViewer.outOfMemory=Недостаточно памяти.\nФайл слишком велик, чтобы его можно было открыть для просмотра.
+SystemLogsViewer.resetConfirmed=Вы уверены, что хотите сбросить выбранный файл журнала?
 SystemOutputPanel.title=Вывод консоли
 SystemOutputPanelPopUpMenu.reset=Сбросить
 SystemOutputPanelPopUpMenu.reset.tooltip=Очистить панель вывода системы и сбросьте файл журнала вывода
