Add localization for HeapMemoryDialog

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1585,6 +1585,7 @@ InsertColumnPanel.PrimaryKey=Primary Key
 InsertColumnPanel.SQL=SQL
 InsertColumnPanel.Table=Table:
 InsertColumnPanel.Type=Type
+HeapMemoryDialog.title=Java Heap Memory
 JobsLogPanel.endDate=End timestamp
 JobsLogPanel.startDate=Start timestamp
 LicenseCommand.license=License
