--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1585,6 +1585,7 @@ InsertColumnPanel.PrimaryKey=Первичный ключ
 InsertColumnPanel.SQL=SQL
 InsertColumnPanel.Table=Таблица:
 InsertColumnPanel.Type=Тип
+HeapMemoryDialog.title=Состояние памяти
 JobsLogPanel.endDate=Конец периода
 JobsLogPanel.startDate=Начало периода
 LicenseCommand.license=Лицензия
